--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   go_router: ^14.8.1
   flutter_riverpod: ^2.6.1
   riverpod_annotation: ^2.6.1
+  fl_chart: ^0.70.2
+  intl: ^0.18.1 
 
 dev_dependencies:
   flutter_test:
